--- a/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
+++ b/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
@@ -11,13 +11,17 @@
       <div *ngIf="transaction" >
         <br>
         <h1> Productname: {{productName}}</h1>
+        <button mat-flat-button class="button_fill"  [routerLink]="['/productDetail', transaction.productId]" routerLinkActive="active" ><b>{{productName}} {{transaction.productId}}</b></button>
 
 
       </div>
+      <br>
       <h2>Sold by: </h2>
+
 
       <div *ngIf="transaction" >
         <button mat-button class="button_fill" [routerLink]="['/user', transaction.userId]" routerLinkActive="active" ><mat-icon >account_circle</mat-icon>{{transaction.userId}}{{sellerName}}</button>
+
         <br>
       </div>
 
