--- a/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.html
+++ b/frontend/src/app/components/user-dashboard/soldproducts/soldproducts.component.html
@@ -6,17 +6,11 @@
   <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let transaction of transactionList">
     <mat-card class="productItem_Card">
 
-
-        <p>
-
-          <br>
-          <button mat-flat-button class="button_fill"  [routerLink]="['/productDetail', transaction.productId]" routerLinkActive="active" ><b>productId: {{transaction.productId}}</b></button>
-          <br>
-
-
-        </p>
-        <div *ngIf="transaction.transactionStatus==1">
-          <b>Status: Please confirm transaction</b>
+            <div *ngIf="transaction.transactionStatus==1">
+          <h1> Productname: {{productName}}</h1>
+          <button mat-flat-button class="button_fill"  [routerLink]="['/productDetail', transaction.productId]" routerLinkActive="active" ><b>{{productName}} {{transaction.productId}}</b></button>
+          <br><br>
+          <h3>Status: Please confirm transaction</h3>
           <br>
           <button mat-flat-button class="button_standard" (click)="sell(transaction.transactionId)">Sell</button>
           <button mat-flat-button class="button_standard" (click)="decline(transaction.transactionId)">Decline</button>
@@ -32,6 +26,7 @@
 
         </div>
         <div>
+          <br>
           Buyer: <br>
           <button mat-button class="button_fill" [routerLink]="['/user', transaction.buyerId]" routerLinkActive="active" ><mat-icon >account_circle</mat-icon>{{transaction.buyerId}}</button>
 
