--- a/frontend/src/app/components/product-display/filter/filter.component.html
+++ b/frontend/src/app/components/product-display/filter/filter.component.html
@@ -1,7 +1,3 @@
-<div class="categoryTitle" *ngIf="category !== ''">
-  {{category}}
-  <button mat-button matSuffix mat-icon-button (click)="clear()"><mat-icon>close</mat-icon></button>
-</div>
 <div class="container">
 <div class="filterBig">
   <div class="filterOptions">
@@ -13,16 +9,16 @@
      </mat-select>
    </mat-form-field>
     <mat-form-field>
-        <input type="text" matInput [(ngModel)]="location" (change)="navigateTo()" placeholder="Location" name="location">
-        <button class="hideIcon" mat-button *ngIf="location !== ''" matSuffix mat-icon-button (click)="clear()">
-        <mat-icon>close</mat-icon>
-      </button>
+        <input type="text" matInput [(ngModel)]="location" (keyup)="navigateTo()" placeholder="Location" name="location">
+        <button class="hideIcon" mat-button *ngIf="location !== ''" matSuffix mat-icon-button value="" (click)="clearLocation()"><mat-icon>close</mat-icon></button>
     </mat-form-field>
     <mat-form-field>
       <input matInput class="priceInput" [(ngModel)]="priceMin" (keyup)="navigateTo()" placeholder="min Price">
+      <button class="hideIcon" mat-button *ngIf="priceMin !== ''" matSuffix mat-icon-button value="" (click)="clearMinPrice()"><mat-icon>close</mat-icon></button>
     </mat-form-field>
     <mat-form-field>
       <input matInput class="priceInput" [(ngModel)]="priceMax" (keyup)="navigateTo()" placeholder="max Price">
+      <button class="hideIcon" mat-button *ngIf="priceMax !== ''" matSuffix mat-icon-button value="" (click)="clearMaxPrice()"><mat-icon>close</mat-icon></button>
     </mat-form-field>
 
     <!-- other layout options for price input -->
@@ -50,20 +46,21 @@
     </mat-form-field>-->
 
     <div class="buttonContainer">
-      <button class="filterButton" mat-button (click)="clear()">clear filter<!--<mat-icon>clear</mat-icon>--></button>
+      <button class="filterButton" mat-button (click)="clearAll()">clear filter<!--<mat-icon>clear</mat-icon>--></button>
       <button class="filterButton" mat-button (click)="clickFilter = !clickFilter">more filter<!--<mat-icon>add</mat-icon>--></button>
     </div>
   </div>
   <div class="moreFilter" *ngIf="clickFilter">
-    <mat-radio-group [(ngModel)]="delivery">
-      <p>Delivery:</p>
+
+    <!-- alternative option -->
+    <!--<mat-radio-group [(ngModel)]="delivery">
+      <a>Delivery:</a>
       <mat-radio-button value="" (change)="navigateTo()">doesn't matter</mat-radio-button>
       <mat-radio-button value="true" (change)="navigateTo()">possible</mat-radio-button>
       <mat-radio-button value="false" (change)="navigateTo()">not possible</mat-radio-button>
-    </mat-radio-group>
-    <!-- not optimal solution
-    <mat-checkbox class="filterCheck" [(ngModel)]="delivery" (change)="navigateTo()" [checked]="delivery" color="#46FFFD">possible</mat-checkbox>
-   -->
+    </mat-radio-group>-->
+
+    <mat-checkbox class="filterCheck" [(ngModel)]="delivery" (change)="navigateTo()" [checked]="delivery" color="#46FFFD">Delivery possible</mat-checkbox>
   </div>
 </div>
 
@@ -75,8 +72,8 @@
   <mat-form-field>
     <mat-label>Select Product Category</mat-label>
     <mat-select [(ngModel)]="category" (selectionChange)="navigateTo()" value="category">
-      <mat-option [value]="">None</mat-option>
-      <mat-option *ngFor="let category of categories" [value]="category.value">{{category.viewValue}}</mat-option>
+      <mat-option class="selectPanel" [value]="">None</mat-option>
+      <mat-option class="selectPanel" *ngFor="let category of categories" [value]="category.value">{{category.viewValue}}</mat-option>
     </mat-select>
   </mat-form-field>
   <mat-form-field>
@@ -96,9 +93,8 @@
       <mat-checkbox [(ngModel)]="delivery" (change)="navigateTo()" [checked]="delivery" color="#46FFFD">Delivery Possible</mat-checkbox>
     </mat-list-item>
   </mat-list>
-
   <div align="right">
-  <button class="filterButton" mat-button [routerLink]="['/search']">clear filter<!--<mat-icon>clear</mat-icon>--></button>
+  <button class="filterButton" mat-button (click)="clearAll()">clear filter<!--<mat-icon>clear</mat-icon>--></button>
   </div>
 </mat-expansion-panel>
 </div>
