--- a/frontend/src/app/components/product-display/product-display.component.html
+++ b/frontend/src/app/components/product-display/product-display.component.html
@@ -1,7 +1,9 @@
 <app-search-bar>
   {{name}}
 </app-search-bar>
-<!--<app-filter (searchInput)="searchProduct($event)"></app-filter>-->
+<div class="categoryTitle" *ngIf="category !== ''">
+  {{category}}
+</div>
 
 <app-filter></app-filter>
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
@@ -26,14 +28,10 @@
         </p>
       </mat-card-content>
 
-      <mat-card-actions *ngIf="isUserLoggedIn" align="end">
-        <button mat-flat-button color="warn" (click)="buyProduct()">Buy</button>
-      </mat-card-actions>
-      <hr>
 
-      <br>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}}</button>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" ><mat-icon>place</mat-icon>{{productItem.productLocation}}</button>
+      <mat-card-actions *ngIf="isUserLoggedIn" align="end">
+        <button mat-flat-button class="button_fill" color="warn"  [routerLink]="['/productDetail', productItem.productId]" routerLinkActive="active" ><b>Check Details</b></button>
+      </mat-card-actions>
 
       <mat-card-footer>
         <mat-chip-list>
