new search component structure (set filter and then search works), add clear icon in search input, add routing to mat-chips in product-display, add chips for search filter, add mat-radio button for delivery filter, fixed registration bug

--- a/frontend/src/app/components/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.html
@@ -1,6 +1,6 @@
 
 <mat-card>
-  <mat-list-item *ngFor="let user of users" >
+  <mat-list-item *ngFor="let user of userList" >
   <app-user
         [user]="user"
         (update)="onUserUpdate($event)"
