--- a/frontend/src/app/components/product-detail/shipping/shipping.component.html
+++ b/frontend/src/app/components/product-detail/shipping/shipping.component.html
@@ -1,6 +1,5 @@
-
+<button mat-Button class="backIcon" (click)="goBack()" matSuffix mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 <div fxLayout="row wrap" fxLayoutGap="32px" fxLayoutAlign="flex-start" >
-
   <mat-card>
     <p>You are buying:</p>
     <b> {{productName}}</b>
