--- a/frontend/src/app/components/product-display/product-display.component.html
+++ b/frontend/src/app/components/product-display/product-display.component.html
@@ -1,11 +1,5 @@
-<app-search-bar>
-  {{name}}
-</app-search-bar>
-<div class="categoryTitle" *ngIf="category !== ''">
-  {{category}}
-</div>
+<app-search></app-search>
 
-<app-filter></app-filter>
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
   <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
 
@@ -40,9 +34,8 @@
 
       <mat-card-footer>
         <mat-chip-list>
-          <mat-chip>{{productItem.productCategory}}</mat-chip>
-          <div *ngIf="productItem.productLocation === !''">
-            <mat-chip>{{productItem.productLocation}}</mat-chip></div>
+          <mat-chip *ngIf="productItem.productCategory" [routerLink]="['/s']" [queryParams]="{c: productItem.productCategory}">{{productItem.productCategory}}</mat-chip>
+          <mat-chip *ngIf="productItem.productLocation" [routerLink]="['/s']" [queryParams]="{l: productItem.productLocation}">{{productItem.productLocation}}</mat-chip>
           <mat-chip *ngIf="productItem.isService">Service </mat-chip>
           <mat-chip *ngIf="productItem.isRentable">rentable</mat-chip>
         </mat-chip-list>
