--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -230,7 +230,7 @@
 <!--edit user profile only-->
 
 <div *ngIf="edit">
-
+  <button mat-Button class="backIcon" (click)="goBack()" matSuffix mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 <mat-card>
 
   <mat-form-field>
