--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,16 +1,16 @@
 ::ng-deep .mat-focused .mat-form-field-label {
   /*change color of label*/
-  color: black !important;
+  color: black;
 }
 
 ::ng-deep.mat-form-field-underline {
   /*change color of underline*/
-  background-color: #46FFFD !important;
+  background-color: #46FFFD;
 }
 
 ::ng-deep.mat-form-field-ripple {
   /*change color of underline when focused*/
-  background-color: #46FFFD !important;;
+  background-color: #46FFFD;
 }
 ::ng-deep .mat-select .mat-select-arrow {
   /* change color of arrow */
@@ -40,6 +40,7 @@
 }
 
 .footer{
-    /* .set the height of the footer */
+    /* set the height of the footer */
     height: 271px;
 }
+
