--- a/frontend/src/app/components/dashboard/search-bar/search-bar.component.css
+++ b/frontend/src/app/components/dashboard/search-bar/search-bar.component.css
@@ -1,3 +1,36 @@
+/* search bar */
+.searchBar {
+  margin-top: 8px;
+  display:flex;
+  flex-direction:row;
+}
+
+input:focus {
+  /* removing the input focus blue box */
+  outline: #46FFFD;
+}
+
+input[type=text]{
+  flex-grow:2;
+  border:1px solid #46FFFD;
+  border-radius: 4px;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+.searchButton {
+  border:1px solid #46FFFD;
+  background:#46FFFD;
+  color:black;
+}
+
+.searchBar .clearIcon {
+  position: absolute;
+  right: 160px;
+  color: #46FFFD;
+}
+
+/* category */
 @media (max-width: 573px){
   .bigDisplay {
     display: none; /* hides categories if display < 573px */
