--- a/frontend/src/app/components/productForm/productForm.component.html
+++ b/frontend/src/app/components/productForm/productForm.component.html
@@ -1,7 +1,7 @@
 <div>
-  <mat-divider></mat-divider>
-  <button (click)="goBack()"><mat-icon>back</mat-icon>go back</button>
-    <h2>My Product</h2>
+  <button mat-Button class="backIcon" (click)="goBack()" matSuffix mat-icon-button><mat-icon>arrow_back</mat-icon></button>
+
+  <h2>My Product</h2>
 
   <mat-card>
     <mat-form-field>
@@ -28,31 +28,10 @@
       <br>
     </div>
     <mat-form-field appearance="fill">
-
       <mat-label>Select Product Category</mat-label>
       <select matNativeControl [(ngModel)]="productCategory" value="productCategory">
-        <option value="AntiquesAndArt">Antiques & Art</option>
-        <option value="BabyAndChild">Baby & Child</option>
-        <option value="Books">Books</option>
-        <option value="OfficeAndCommercial">Office & Commercial</option>
-        <option value="ComputerAndComputer accessories">Computer & Computer accessories</option>
-        <option value="Vehicles">Vehicles</option>
-        <option value="Films">Films</option>
-        <option value="PhotoAndVideo">Photo & Video</option>
-        <option value="GardenAndCrafts">Garden & Crafts</option>
-        <option value="Housekeeping">Housekeeping</option>
-        <option value="RealEstate">Real estate</option>
-        <option value="ClothingAndAccessories">Clothing & Accessories</option>
-        <option value="Music">Music</option>
-        <option value="Collect">Collect</option>
-        <option value="ToysAndCrafts">Toys & Crafts</option>
-        <option value="SportsAndOutdoors">Sports & Outdoors</option>
-        <option value="JobOffers">Job offers</option>
-        <option value="TVAndAudio">TV & Audio</option>
-        <option value="PhoneAndNavigation">Phone & Navigation</option>
-        <option value="TicketsAndVouchers">Tickets & Vouchers</option>
-        <option value="Animals">Animals</option>
-        <option value="Miscellaneous">Miscellaneous</option>
+        <option [value]="">None</option>
+        <option *ngFor="let category of categories" [value]="category.value">{{category.viewValue}}<option>
       </select>
     </mat-form-field>
   </mat-card>
