--- a/frontend/src/app/components/product-display/filter/filter.component.html
+++ b/frontend/src/app/components/product-display/filter/filter.component.html
@@ -99,3 +99,35 @@
 </mat-expansion-panel>
 </div>
 </div>
+
+
+
+<!--Near you-->
+<div>
+  <mat-card>
+    <h2>Products near you:</h2>
+
+
+    <mat-form-field>
+      <input matInput placeholder="Zip code" [(ngModel)]="addressPin" name="addressPin" (ngModelChange)="nearYou(addressPin)">
+    </mat-form-field>
+
+    <br>
+    <h3>Range in "km"</h3>
+
+    <mat-slider
+      thumbLabel
+      [displayWith]="formatLabel"
+      tickInterval="1000"
+      min="1"
+      max="500"
+      [(ngModel)]="value">
+    </mat-slider>
+
+    <mat-form-field class="example-margin">
+      <mat-label>Value</mat-label>
+      <input matInput type="number" [(ngModel)]="value">
+    </mat-form-field>
+
+  </mat-card>
+</div>
