cross origin error testing

--- a/frontend/src/app/components/product-display/filter/filter.component.html
+++ b/frontend/src/app/components/product-display/filter/filter.component.html
@@ -112,7 +112,7 @@
 
 
     </mat-form-field>
-      <button mat-button (click)="getPinsInRadius(addressPin)"><mat-icon>search</mat-icon></button>
+      <button mat-button (click)="getPinsInRadius(addressPin)"><mat-icon>search</mat-icon>cross error</button>
 
 
     <p>{{value}} km near you</p>
@@ -131,3 +131,10 @@
 
   </mat-card>
 </div>
+
+<mat-card>
+
+  <button mat-button (click)="getData()"><mat-icon>search</mat-icon>no error?</button>
+
+
+</mat-card>
