--- a/frontend/src/app/components/search/search.component.css
+++ b/frontend/src/app/components/search/search.component.css
@@ -21,6 +21,11 @@ mat-checkbox{
   font-size: 15px;
 }
 
+::ng-deep.mat-form-field .mat-form-field-label {
+  /*change color of underline*/
+  color: #F0F0F0;
+}
+
 /** search bar **/
 .searchBar {
   margin-top: 8px;
