--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -231,6 +231,8 @@
 
 <div *ngIf="edit">
   <button mat-Button class="backIcon" (click)="goBack()" matSuffix mat-icon-button><mat-icon>arrow_back</mat-icon></button>
+
+  <h2>My Profile</h2>
 <mat-card>
 
   <mat-form-field>
