--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -57,7 +57,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
           <button mat-flat-button class="button_standard" [routerLink]="['/productForm/', productItem.productId]" routerLinkActive="active">Edit</button>
-          <button mat-flat-button class="button_standard" (click)="deleteProduct([productItem.productId])" [disabled]="!productItem.isAvailable">Delete</button>
+          <button mat-flat-button class="button_standard" (click)="deleteProduct(productItem)" [disabled]="!productItem.isAvailable">Delete</button>
         </mat-card-actions>
         <hr>
 
