--- a/frontend/src/app/components/leaderboard/leaderboard.component.html
+++ b/frontend/src/app/components/leaderboard/leaderboard.component.html
@@ -1,1 +1,11 @@
-<p>leaderboard works!</p>
+<h3>Leaderboard</h3>
+
+<div  fxLayout="row" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
+  <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let LeaderBoardScore of leaderBoard">
+    <mat-card >
+
+
+
+    </mat-card>
+  </div>
+</div>
