--- a/frontend/src/app/components/product-display/filter/filter.component.html
+++ b/frontend/src/app/components/product-display/filter/filter.component.html
@@ -112,7 +112,7 @@
 
 
     </mat-form-field>
-      <button mat-button (click)="getPinsInRadius(addressPin)"><mat-icon>search</mat-icon>cross error</button>
+      <button mat-button (click)="getPinsInRadius(addressPin)"><mat-icon>search</mat-icon>Go!</button>
 
 
     <p>{{value}} km near you</p>
