--- a/frontend/src/app/components/productForm/productForm.component.html
+++ b/frontend/src/app/components/productForm/productForm.component.html
@@ -22,23 +22,17 @@
     <br>
 
 
-
-
     <input
-    style="display: none"
-    type="file" multiple (change)="selectFiles($event)"
-    #fileInput>
-    <button mat-flat-button class="button_standard" (click)="fileInput.click()">Select File</button>
+      style="display: none"
+      type="file" (change)="onFileChanged($event)"
+      #fileInput>
+    <button mat-flat-button class="button_standard" (click)="fileInput.click()">Select File (.png, .jpg, .jpeg)</button>
+    <button mat-flat-button class="button_standard" (click)="onUpload()">Upload</button>
 
-
-
-    <button mat-flat-button class="button_standard" (click)="onUpload()">Upload!</button>
-    <br>
     <div *ngIf="imageSelected">
-      <div *ngFor="let progressInfo of progressInfos">
-       {{progressInfo.fileName}}
-      </div>
+        {{imageName}}
     </div>
+
   </mat-card>
 
   <mat-card>
