--- a/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
+++ b/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
@@ -10,8 +10,8 @@
 
       <div *ngIf="transaction" >
         <br>
-        <h1> Productname: {{productName}}</h1>
-        <button mat-flat-button class="button_fill"  [routerLink]="['/productDetail', transaction.productId]" routerLinkActive="active" ><b>{{productName}} {{transaction.productId}}</b></button>
+
+        <button mat-flat-button class="button_fill"  [routerLink]="['/productDetail', transaction.productId]" routerLinkActive="active" ><b>{{transaction.product.productName}}</b></button>
 
 
       </div>
@@ -20,16 +20,12 @@
 
 
       <div *ngIf="transaction" >
-        <button mat-button class="button_fill" [routerLink]="['/user', transaction.userId]" routerLinkActive="active" ><mat-icon >account_circle</mat-icon>{{transaction.userId}}{{sellerName}}</button>
+        <button mat-button class="button_fill" [routerLink]="['/user', transaction.userId]" routerLinkActive="active" ><mat-icon >account_circle</mat-icon>{{transaction.seller.userName}}{{sellerName}}</button>
 
         <br>
       </div>
 
       <p>
-
-        <br>
-        <button mat-flat-button class="button_fill"  [routerLink]="['/productDetail', transaction.productId]" routerLinkActive="active" ><b>{{productName}}</b></button>
-        <br>
 
 
       </p>
@@ -45,6 +41,7 @@
         <br>
         <b>Bought by:</b>
         <br>
+        {{transaction.buyer.userName}}<br>
         {{transaction.deliveryFirstName}} {{transaction.deliveryLastName}}<br>
         {{transaction.deliveryStreet}}<br>
         {{transaction.deliveryPin}} {{transaction.deliveryCity}}<br>
