fixed reload after decline

--- a/frontend/src/app/components/product-detail/shipping/shipping.component.html
+++ b/frontend/src/app/components/product-detail/shipping/shipping.component.html
@@ -83,7 +83,7 @@
 
 
 
-        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash()" (click)="buyProduct()">Buy</button>
+        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash()" (click)="otherAddressBuyProduct()">Buy</button>
 
 
       </mat-tab>
