added zipcode feature to other shipping address

--- a/frontend/src/app/components/product-detail/shipping/shipping.component.html
+++ b/frontend/src/app/components/product-detail/shipping/shipping.component.html
@@ -69,7 +69,7 @@
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="Zip code" [(ngModel)]="otherAddressPin" name="otherAddressPin" >
+          <input matInput placeholder="Zip code" [(ngModel)]="otherAddressPin" name="otherAddressPin" (ngModelChange)="requestCity()">
         </mat-form-field>
 
 
