--- a/frontend/src/app/components/product-detail/shipping/shipping.component.html
+++ b/frontend/src/app/components/product-detail/shipping/shipping.component.html
@@ -50,7 +50,7 @@
 
 
 
-        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash()" (click)="buyProduct()">Buy</button>
+        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash() || !isUserLoggedIn" (click)="buyProduct()">Buy</button>
 
 
 
@@ -82,7 +82,7 @@
 
 
 
-        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash()" (click)="buyProduct()">Buy</button>
+        <button mat-flat-button color="warn"  [routerLink]="['/user']" routerLinkActive="active" [disabled]="checkCash || !isUserLoggedIn" (click)="buyProduct()">Buy</button>
 
 
       </mat-tab>
