--- a/frontend/src/app/components/search/search.component.html
+++ b/frontend/src/app/components/search/search.component.html
@@ -57,25 +57,18 @@
       </div>
     </div>
     <div class="moreFilter" *ngIf="clickFilter">
-      <mat-radio-group [(ngModel)]="delivery" color="#46FFFD">
+      <mat-radio-group [(ngModel)]="delivery" color="#46FFFD" name="delivery">
         <a>Delivery:</a>
-        <mat-radio-button value="" (change)="navigateTo()">doesn't matter</mat-radio-button>
-        <mat-radio-button value="true" (change)="navigateTo()">possible</mat-radio-button>
-        <mat-radio-button value="false" (change)="navigateTo()">not possible</mat-radio-button>
+        <mat-radio-button *ngFor="let data of selection" [checked]="data.value" (click)="showDelivery(data.value)">{{data.name}}</mat-radio-button>
       </mat-radio-group>
-      <mat-radio-group [(ngModel)]="isRentable" color="#46FFFD">
-        <span>Rentable:</span>
-        <mat-radio-button value="" (change)="navigateTo()">doesn't matter</mat-radio-button>
-        <mat-radio-button value="true" (change)="navigateTo()">possible</mat-radio-button>
-        <mat-radio-button value="false" (change)="navigateTo()">not possible</mat-radio-button>
+      <mat-radio-group [(ngModel)]="isRentable" color="#46FFFD" name="isRentable">
+        <a>Rentable:</a>
+        <mat-radio-button *ngFor="let data of selection" [checked]="data.value" (click)="showRenatble(data.value)">{{data.name}}</mat-radio-button>
       </mat-radio-group>
-      <mat-radio-group [(ngModel)]="isService" color="#46FFFD">
-        <span>Service:</span>
-        <mat-radio-button value="" (change)="navigateTo()">doesn't matter</mat-radio-button>
-        <mat-radio-button value="true" (change)="navigateTo()">possible</mat-radio-button>
-        <mat-radio-button value="false" (change)="navigateTo()">not possible</mat-radio-button>
+      <mat-radio-group [(ngModel)]="isService" color="#46FFFD" name="isService">
+        <a>Service:</a>
+        <mat-radio-button *ngFor="let data of selection" [checked]="data.value" (click)="showService(data.value)">{{data.name}}</mat-radio-button>
       </mat-radio-group>
-
       <!-- alternative option -->
       <!--<mat-checkbox class="filterCheck" [(ngModel)]="delivery" (change)="navigateTo()" [checked]="delivery" color="#46FFFD">Delivery possible</mat-checkbox>-->
     </div>
