--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -5,12 +5,12 @@
 
 ::ng-deep.mat-form-field-underline {
   /*change color of underline*/
-  background-color: #46FFFD;
+  background-color: #D3D9EF !important;
 }
 
 ::ng-deep.mat-form-field-ripple {
   /*change color of underline when focused*/
-  background-color: #46FFFD;
+  background-color: #D3D9EF !important;
 }
 ::ng-deep .mat-select .mat-select-arrow {
   /* change color of arrow */
@@ -29,6 +29,24 @@
 ::ng-deep .mat-checkbox .mat-checkbox-checked {
   /*change color of check mark*/
   color: #46FFFD;
+}
+
+::ng-deep .mat-tab-list .mat-tab-label-active {
+  color: #F72871;
+  background-color: #46FFFD;
+  box-shadow:0px 0px 10px #46FFFD;
+  font-family:'Press Start 2P', cursive !important;
+
+}
+::ng-deep .mat-typography .mat-tab-group{
+  font-family:'Press Start 2P', cursive;
+}
+
+::ng-deep .mat-tab-labels{
+  color: white !important;
+  margin: 10px;
+  font-family:'Press Start 2P', cursive !important;
+
 }
 
 .app {
