--- a/frontend/src/app/components/admin-panel/admin-panel.component.css
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.css
@@ -2,10 +2,18 @@ mat-radio-button{
   margin-right: 5px;
 }
 
+.navigation{
+  background-color: turquoise;
+  color:whitesmoke;
+  }
 
 .center-cropped {
   object-fit: cover; /* Do not scale the image */
   height: 150px;
   width: auto;
   opacity: 0.7;
+}
+
+.mat-ink-bar {
+  background-color: green;
 }
