--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 html, body { height: 100%; }
 
-body { margin: 30px; font-family: Roboto, "Helvetica Neue", sans-serif; background-color:  #082A5D; color: #EEEEEE}
+body { margin: 30px; font-family: 'Press Start 2P', cursive !important; background-color:  #082A5D; color: #EEEEEE}
 
 .mat-card {
   margin: 20px 0;
@@ -13,13 +14,19 @@ body { margin: 30px; font-family: Roboto, "Helvetica Neue", sans-serif; backgrou
 button, input {
   margin-left: 15px !important;
   margin-right: 15px !important;
+  font-family:'Press Start 2P', cursive !important;
+
 
 }
 
 .mat-form-field-wrapper {
   margin-right: 25px !important;
+  font-family:'Press Start 2P', cursive !important;
+
 }
 
 .button_standard{
   background-color: #46FFFD;
+  box-shadow: 2px 2px 20px #46FFFD;
+  font-family:'Press Start 2P', cursive !important;
 }
