--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,13 +1,9 @@
 <mat-toolbar role="heading">
   <mat-toolbar-row>
-<div>
-    <a routerLink="/home">
-        <img src="assets/cd/logo_small.png" class="logo" alt="Stor" width="50%">
-      </a>
-</div>
+
     <div class="nav">
       <a routerLink="/home">
-        <img src="assets/cd/logo_font_only.png"  class="logo" alt="Stor" />
+        <img src="assets/cd/loader.gif"  class="logo" alt="gif of diskette" />
       </a>
     </div>
     <span class="spacer"></span>
