now displays product in detailView & shipping

--- a/frontend/src/app/components/product-detail/shipping/shipping.component.html
+++ b/frontend/src/app/components/product-detail/shipping/shipping.component.html
@@ -4,6 +4,8 @@
   <mat-card>
     <p>You are buying:</p>
     <b> {{productName}}</b>
+    <br>
+    <img class="small" [src]="picture[0]" />
 
     <br><br>
     <p>for <b>{{productPrice}}</b> CHF</p>
