--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.css
@@ -8,3 +8,11 @@ img {
   margin: 5px;
 }
 
+
+
+.img {
+  object-fit: cover; /* Do not scale the image */
+  height: 200px;
+  width: auto;
+  opacity: 0.7;
+}
