--- a/frontend/src/app/components/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/product-detail/product-detail.component.html
@@ -18,7 +18,7 @@
 
   <mat-card-content>
 
-    <img mat-card-image class="center-cropped" src="{{productImage}}" alt="{{productName}}" >
+    <img class="center-cropped" alt="{{productName}}" [src]="picture[0]" />
     <br>
 
     <button mat-button class="button_fill" [routerLink]="['/', productCategory]" routerLinkActive="active" ><mat-icon >chevron_right</mat-icon>{{productCategory}}</button>
