added category file, fixed bug to update admin/user view after approve and delete, added transaction service, changed all class models to interfaces, delete user and product-item component, add/ updated all snackbar messages

--- a/frontend/src/app/components/product-detail/product-detail.component.css
+++ b/frontend/src/app/components/product-detail/product-detail.component.css
@@ -1,7 +1,12 @@
-
 .center-cropped {
   object-fit: cover; /* Do not scale the image */
   height: 350px;
   width: auto;
   opacity: 0.7;
+}
+
+.backIcon{
+  margin-top: 1%;
+  color: #F0F0F0;
+  margin-bottom: 0px;
 }
