--- a/frontend/src/app/components/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <mat-card>
   <mat-list-item *ngFor="let user of userList" >
   <app-user
@@ -8,18 +8,18 @@
       ></app-user>
 
   </mat-list-item>
-</mat-card>
-<!--
+</mat-card>-->
+
 <div class="shaded">
   <mat-list *ngFor="let user of userList">
     <mat-list-item>
     Name: {{user.userName}}, ID:  {{user.userId}} , is Admin
-    <mat-checkbox [(ngModel)]="user.admin" (change)="onUserUpdate()" [checked]="user.admin">Admin User</mat-checkbox>
-    <button mat-flat-button color="warn" (click)="onUserDelete()">Delete User</button>
+    <mat-checkbox [(ngModel)]="user.admin" (change)="upgradeUser(user)" [disabled]="user.admin" [checked]="user.admin">Admin User</mat-checkbox>
+    <button mat-flat-button color="warn" (click)="deleteUser(user)">Delete User</button>
     </mat-list-item>
   </mat-list>
 </div>
--->
+
 
 <mat-card >
   <mat-grid-list cols="4" [gutterSize]="'5px'" rowHeight="450px">
