--- a/frontend/src/app/components/productForm/productForm.component.html
+++ b/frontend/src/app/components/productForm/productForm.component.html
@@ -5,25 +5,20 @@
 
   <mat-card>
     <mat-form-field>
-
-      <input matInput placeholder="Product Name" [(ngModel)]="productName" name="productName">
-      <div *ngIf="empty(productName)" class="invalid-feedback">Product Name</div>
-
+      <input matInput placeholder="Product Name*" [(ngModel)]="productName" name="productName">
     </mat-form-field>
 
     <br>
 
     <mat-form-field>
-
       <input matInput placeholder="Product Image" [(ngModel)]="productImage" name="productImage">
-      <div *ngIf="empty(productImage)" class="invalid-feedback">Please add a Photo</div>
     </mat-form-field>
   </mat-card>
 
   <mat-card>
     <mat-checkbox [(ngModel)]="isService">Is your Product a Service?</mat-checkbox>
 
-    <mat-checkbox class="checkboxMargin" [(ngModel)]="isRentable">Is your Product rentable?</mat-checkbox>
+    <mat-checkbox class="checkboxMargin" [(ngModel)]="isRentable">Is your product rentable?</mat-checkbox>
     <div>
       <br>
     </div>
@@ -51,16 +46,17 @@
   <mat-card>
 
     <mat-form-field>
-      <mat-label>Price</mat-label>
-      <input matInput placeholder="" [(ngModel)]="productPrice" name="productPrice">
+      <mat-label>Price*</mat-label>
+      <input matInput placeholder="" [(ngModel)]="productPrice">
       <span matPrefix>CHF&nbsp;</span>
       <span matSuffix>.00</span>
-      <div *ngIf="empty(productPrice)" class="invalid-feedback">Please add a Price</div>
+      <div *ngIf="!empty(productPrice)">
+        <div *ngIf="checkNumber(productPrice)" class="invalid-feedback">Price needs to be a number!</div>
+      </div>
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Location" [(ngModel)]="productLocation" name="productLocation">
-      <div *ngIf="empty(productLocation)" class="invalid-feedback">e.g. 3012</div>
+      <input matInput placeholder="Location*" [(ngModel)]="productLocation" name="productLocation">
     </mat-form-field>
 
     <mat-checkbox class="checkboxMargin" [(ngModel)]="productDelivery">Product delivery possible?</mat-checkbox>
@@ -69,10 +65,11 @@
 
   <mat-card>
     <div *ngIf="add">
-    <button mat-flat-button class="button_standard" (click)="addProduct()" [disabled]="!allFieldsAreFilled()">Add Product</button>
+    <button mat-flat-button class="button_standard" (click)="addProduct()" [disabled]="allFilled(productName, productPrice, productLocation) || checkNumber(productPrice)">Add Product</button>
     </div>
     <div *ngIf="!add">
-    <button mat-flat-button class="button_standard" (click)="editProduct()" [disabled]="!allFieldsAreFilled()">Save Product</button>
+    <button mat-flat-button class="button_standard" (click)="editProduct()" [disabled]="allFilled(productName, productPrice, productLocation) || checkNumber(productPrice)">Save Product</button>
     </div>
   </mat-card>
+  <p>*Required Fields</p>
 </div>
