--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -1,25 +1,22 @@
 <mat-tab-group>
 
   <mat-tab label ="my Profile" >
-<mat-card>
+<mat-card class= "myProfile">
   <mat-card-header>
     <mat-card-title>My Profile</mat-card-title>
-    <br>
-    <mat-card-subtitle>{{userName}}</mat-card-subtitle>
+  
+    <mat-card-subtitle class = "myProfile">{{userName}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-
-    {{userName}}<br>
-    {{userFirstName}}<br>
-    {{userLastName}}<br>
+    Adress: <br>
+    {{userFirstName}} {{userLastName}}<br>
     {{userAddressStreet}}<br>
-    {{userAddressPin}}, {{userAddressCity}} <br>
+    {{userAddressPin}} {{userAddressCity}} <br>
     {{userAddressCountry}} <br>
     <br> <b>
     Your current balance:
     {{userWallet}} CHF
   </b>
-
 
   </mat-card-content>
   <mat-card-actions>
